# NDSU-Byte-le-2026

./: .gitignore  README.md  install.sh  leaderboard.sh  run.sh  submit.sh
fivenights/: base_client.py  convert_enum.py  main.py  pyproject.toml
